Revision history for CatalystX-CRUD-Controller-RHTMLO

0.01    19 Oct 2007
        First version, released on an unsuspecting world.

0.02    20 Oct 2007
        * fix POD line so that CPAN doesn't think there's doc separate from code

0.03    23 Oct 2007

0.04    25 Oct 2007
        * override form() to stash the $c object in app()

0.05    1 November 2007
        * return from do_search() if no input to form
        * pass field names on to NEXT do_search so they make it to make_query()

0.06    9 Nov 2007
        * fix legacy refactoring bug in form_to_object() (no such thing as param_hash() method)
          Thanks to John Siracusa for the catch.

0.07    16 Nov 2007
        * fix bug with form->init_fields where values were being un-initialized if params were not
          present.

0.08    17 Nov 2007
        * fix bug when checking for whether do_search() should be performed.

0.09    31 Dec 2007
        * implement field_names() per CXC::Controller API.
        * fix bug in form() where app() would be set to undef if $c was not passed.
        * added custom create() to allow for form prepopulation via $c->req->params
        * make debug() statement in do_search() conditional on $c->debug

0.10    29 Jan 2008
        * fix bug to allow for PKs that are not serial ints

0.11    xxx
        * add all_form_errors() method
